--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 			</a>
 		</div>
 		<div class="social__item" data-aos="zoom-out-left" data-aos-delay="200">
-			<a class="social__link" href="mailto:cloudymotion93@gmail.com">
+			<a class="social__link" href="mailto:Cloudymotionproductions@gmail.com">
 				<span class="icon-email"></span>
 			</a>
 		</div>
@@ -121,7 +121,7 @@
 								</a>
 							</div>
 							<div class="page__social-item">
-								<a class="page__social-link" href="mailto:cloudymotion93@gmail.com">
+								<a class="page__social-link" href="mailto:Cloudymotionproductions@gmail.com">
 									<span class="icon-email"></span>
 								</a>
 							</div>
@@ -382,7 +382,7 @@
 						<div class="price df" data-aos="zoom-out-down">
 							<h3 class="price__title">Creating artworks</h3>
 							<div class="price__price-block">
-								<h4 class="price__price"><sup>$</sup>20</h4>
+								<h4 class="price__price" data-product="artwork"></h4>
 							</div>
 							<div class="price__link-block">
 								<a class="price__link btn unselect" href="store/?open-popup=artwork" target="_blank">
@@ -399,7 +399,7 @@
 						<div class="price df" data-aos="zoom-out-down" data-aos-delay="100">
 							<h3 class="price__title">Mixing and Mastering</h3>
 							<div class="price__price-block">
-								<h4 class="price__price"><sup>$</sup>40</h4>
+								<h4 class="price__price" data-product="mixingAndMastering"></h4>
 							</div>
 							<div class="price__link-block">
 								<a class="price__link btn unselect" href="store/?open-popup=mixing-and-mastering" target="_blank">
@@ -416,7 +416,7 @@
 						<div class="price df" data-aos="zoom-out-down" data-aos-delay="200">
 							<h3 class="price__title">Making visuals</h3>
 							<div class="price__price-block">
-								<h4 class="price__price"><sup>$</sup>35</h4>
+								<h4 class="price__price" data-product="visuals"></h4>
 							</div>
 							<div class="price__link-block">
 								<a class="price__link btn unselect" href="store/?open-popup=visuals" target="_blank">
@@ -424,7 +424,7 @@
 									<span class="btn__circle"></span>
 								</a>
 							</div>
-							<a class="price__fulllink" href="store/?to-section=visuals" target="_blank"></a>
+							<a class="price__fulllink" href="store/?open-popup=visuals" target="_blank"></a>
 							<span class="price__decoration"></span>
 							<span class="icon-visuals price__icon-info"></span>
 						</div>
@@ -433,7 +433,7 @@
 						<div class="price df" data-aos="zoom-out-down" data-aos-delay="100">
 							<h3 class="price__title">Creating beats for order</h3>
 							<div class="price__price-block">
-								<h4 class="price__price"><sup>$</sup>100</h4>
+								<h4 class="price__price" data-product="order"></h4>
 							</div>
 							<div class="price__link-block">
 								<a class="price__link btn unselect" href="store/?open-popup=order" target="_blank">
@@ -450,7 +450,7 @@
 						<div class="price df" data-aos="zoom-out-down">
 							<h3 class="price__title">Exclusive and none exclusive beats</h3>
 							<div class="price__price-block">
-								<h4 class="price__price"><sup>$</sup>20-300</h4>
+								<h4 class="price__price" data-product="beats"></h4>
 							</div>
 							<div class="price__link-block">
 								<a class="price__link btn unselect" href="store/?to-section=beats" target="_blank">
@@ -655,14 +655,14 @@
 						<div class="question df">
 							<h3 class="question__title">What if I have any issues or other concerns?</h3>
 							<div class="question__text-block">
-								<p class="question__text">If there are some questions left or you have any ideas how we can develop our website contact us via <a class="question__link" href="https://www.instagram.com/cloudymotion4life" target="_blank">Instagram</a> or our <a class="question__link" href="mailto:cloudymotion93@gmail.com">email</a>. We will look for ways to help you.</p>
+								<p class="question__text">If there are some questions left or you have any ideas how we can develop our website contact us via <a class="question__link" href="https://www.instagram.com/cloudymotion4life" target="_blank">Instagram</a> or our <a class="question__link" href="mailto:Cloudymotionproductions@gmail.com">email</a>. We will look for ways to help you.</p>
 							</div>
 							<div class="question__decoration"></div>
 						</div>
 					</div>
 				</div>
 				<div class="faq__btn-block df" data-aos="zoom-out-right">
-					<a class="faq__link" href="mailto:cloudymotion93@gmail.com">Contact us by e-mail</a>
+					<a class="faq__link" href="mailto:Cloudymotionproductions@gmail.com">Contact us by e-mail</a>
 					<button class="faq__btn unselect"><span>Didn't get an answer for your question?</span></button>
 				</div>
 			</div>
@@ -722,7 +722,7 @@
 								</div>
 								<div class="footer-item__social-column df">
 									<div class="footer-item__social-item" data-aos="zoom-out-down" data-aos-delay="200" data-aos-once="true" data-aos-anchor=".footer-item__link_store">
-										<a class="footer-item__social df" href="mailto:cloudymotion93@gmail.com"><span class="icon-email"></span></a>
+										<a class="footer-item__social df" href="mailto:Cloudymotionproductions@gmail.com"><span class="icon-email"></span></a>
 									</div>
 								</div>
 							</div>
