--- a/store/index.html
+++ b/store/index.html
@@ -300,7 +300,7 @@
 						<div class="footer__contact">
 							<div class="footer__contact-block">
 								<div class="footer__contact-block">
-									<a class="footer__contact-link df" href="mailto:cloudymotion93@gmail.com">
+									<a class="footer__contact-link df" href="mailto:Cloudymotionproductions@gmail.com">
 										<span class="icon-email"></span> Contact Us
 									</a>
 								</div>
@@ -462,7 +462,7 @@
 							</div>
 							<div class="popup__end-block">
 								<div class="popup__end-row df">
-									<div class="popup__end-total">$20</div>
+									<div class="popup__end-total"></div>
 									<div class="popup__post-block">
 										<button class="popup__post popup__post_lock unselect" data-product="artwork">
 											<span>Add To Cart</span>
@@ -597,7 +597,7 @@
 							</div>
 							<div class="popup__end-block">
 								<div class="popup__end-row df">
-									<div class="popup__end-total">$35</div>
+									<div class="popup__end-total"></div>
 									<div class="popup__post-block">
 										<button class="popup__post popup__post_lock unselect" data-product="visual">
 											<span>Add To Cart</span>
@@ -784,12 +784,20 @@
 								<div class="popup__input-item">
 									<h4 class="popup__input-title">Output Format</h4>
 									<div class="popup__input-block">
-										<div class="popup__input-select">
-											<div class="popup__input-option-current unselect">Mp3</div>
-											<div class="popup__input-select-body">
-												<div class="popup__input-option popup__input-option_current unselect" data-value="mp3">Mp3</div>
-												<div class="popup__input-option unselect" data-value="wav">Wav</div>
-												<div class="popup__input-option unselect" data-value="m4a">M4a</div>
+										<div class="popup__input-checkbox checkbox checkbox_triple" data-checkbox-name="mixing-output-format" data-checkbox-type="info">
+											<div class="checkbox__body">
+												<div class="checkbox__indicator"></div>
+												<div class="checkbox__row df">
+													<div class="checkbox__column">
+														<div class="checkbox__item checkbox__item_1 unselect df checkbox__item_active" data-checkbox-value="mp3">Mp3</div>
+													</div>
+													<div class="checkbox__column">
+														<div class="checkbox__item checkbox__item_2 unselect df" data-checkbox-value="wav">Wav</div>
+													</div>
+													<div class="checkbox__column">
+														<div class="checkbox__item checkbox__item_3 unselect df" data-checkbox-value="m4a">M4a</div>
+													</div>
+												</div>
 											</div>
 										</div>
 									</div>
@@ -797,7 +805,7 @@
 							</div>
 							<div class="popup__end-block">
 								<div class="popup__end-row df">
-									<div class="popup__end-total">$40</div>
+									<div class="popup__end-total"></div>
 									<div class="popup__post-block">
 										<button class="popup__post popup__post_lock unselect" data-product="mixingAndMastering">
 											<span>Add To Cart</span>
@@ -895,10 +903,27 @@
 										</div>
 									</div>
 								</div>
+								<div class="popup__input-item">
+									<div class="popup__input-block">
+										<div class="popup__input-checkbox checkbox checkbox_double" data-checkbox-name="order-type" data-checkbox-type="void">
+											<div class="checkbox__body">
+												<div class="checkbox__indicator"></div>
+												<div class="checkbox__row df">
+													<div class="checkbox__column">
+														<div class="checkbox__item checkbox__item_1 unselect df checkbox__item_active" data-checkbox-value="!exclusive">Not Exclusive</div>
+													</div>
+													<div class="checkbox__column">
+														<div class="checkbox__item checkbox__item_2 unselect df" data-checkbox-value="exclusive">Exclusive</div>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
 							</div>
 							<div class="popup__end-block">
 								<div class="popup__end-row df">
-									<div class="popup__end-total">$100</div>
+									<div class="popup__end-total"></div>
 									<div class="popup__post-block">
 										<button class="popup__post popup__post_lock unselect" data-product="order">
 											<span>Add To Cart</span>
@@ -1077,7 +1102,7 @@
 			<div class="alert__row alert__row_2 df">
 				<div class="alert__column alert__column_3 df">
 					<div class="alert__support-block">
-						<a class="alert__support unselect" href="mailto:cloudymotion93@gmail.com">Support</a>
+						<a class="alert__support unselect" href="mailto:Cloudymotionproductions@gmail.com">Support</a>
 					</div>
 				</div>
 				<div class="alert__column alert__column_4 df">
@@ -1091,7 +1116,7 @@
 			<div class="alert__row alert__row_3">
 				<div class="alert__column alert__column_3 df">
 					<div class="alert__support-block">
-						<a class="alert__support unselect" href="mailto:cloudymotion93@gmail.com">Support</a>
+						<a class="alert__support unselect" href="mailto:Cloudymotionproductions@gmail.com">Support</a>
 					</div>
 				</div>
 				<div class="alert__column alert__column_4 df">
