--- a/store/index.html
+++ b/store/index.html
@@ -119,23 +119,23 @@
 					<div class="service service_1 df" data-popup="artwork" data-popup-type="service">
 						<div class="service__title-row df">
 							<div class="service__title-column">
+								<h2 class="service__title service__title_bigger">Artwork</h2>
+							</div>
+							<div class="service__title-column">
 								<div class="service__icon-block">
 									<span class="icon-artwork"></span>
 								</div>
 							</div>
-							<div class="service__title-column">
-								<h2 class="service__title service__title_bigger">Artwork</h2>
-							</div>
 						</div>
 						<div class="service__content-row df">
 							<div class="service__content-column">
-								<div class="service__btn-block">
-									<button class="service__btn" data-popup="artwork" data-popup-type="service">Start Now</button>
+								<div class="service__content">
+									<p class="service__text">Need a cover art for your music?Want this to look professional? We are ready to help you!</p>
 								</div>
 							</div>
 							<div class="service__content-column">
-								<div class="service__content">
-									<p class="service__text">Need a cover art for your music?Want this to look professional? We are ready to help you!</p>
+								<div class="service__btn-block">
+									<button class="service__btn" data-popup="artwork" data-popup-type="service">Start Now</button>
 								</div>
 							</div>
 						</div>
@@ -145,23 +145,23 @@
 					<div class="service service_2 df" data-popup="visuals" data-popup-type="service">
 						<div class="service__title-row df">
 							<div class="service__title-column">
+								<h2 class="service__title service__title_bigger">Visuals</h2>
+							</div>
+							<div class="service__title-column">
 								<div class="service__icon-block">
 									<span class="icon-visuals"></span>
 								</div>
 							</div>
-							<div class="service__title-column">
-								<h2 class="service__title service__title_bigger">Visuals</h2>
-							</div>
 						</div>
 						<div class="service__content-row df">
 							<div class="service__content-column">
-								<div class="service__btn-block">
-									<button class="service__btn" data-popup="visuals" data-popup-type="service">Start Now</button>
+								<div class="service__content">
+									<p class="service__text">How about an Exclusive animated videos for your music? It’s the thing you really need!</p>
 								</div>
 							</div>
 							<div class="service__content-column">
-								<div class="service__content">
-									<p class="service__text">How about an Exclusive animated videos for your music? It’s the thing you really need!</p>
+								<div class="service__btn-block">
+									<button class="service__btn" data-popup="visuals" data-popup-type="service">Start Now</button>
 								</div>
 							</div>
 						</div>
@@ -171,23 +171,23 @@
 					<div class="service service_3 df" data-popup="mixingAndMastering" data-popup-type="service">
 						<div class="service__title-row df">
 							<div class="service__title-column">
+								<h2 class="service__title">Mixing & Mastering</h2>
+							</div>
+							<div class="service__title-column">
 								<div class="service__icon-block">
 									<span class="icon-hexagon"></span>
 								</div>
 							</div>
-							<div class="service__title-column">
-								<h2 class="service__title">Mixing & Mastering</h2>
-							</div>
 						</div>
 						<div class="service__content-row df">
 							<div class="service__content-column">
-								<div class="service__btn-block">
-									<button class="service__btn" data-popup="mixingAndMastering" data-popup-type="service">Start Now</button>
+								<div class="service__content">
+									<p class="service__text">You have a problem with music production? Our team is ready to solve it!</p>
 								</div>
 							</div>
 							<div class="service__content-column">
-								<div class="service__content">
-									<p class="service__text">You have a problem with music production? Our team is ready to solve it!</p>
+								<div class="service__btn-block">
+									<button class="service__btn" data-popup="mixingAndMastering" data-popup-type="service">Start Now</button>
 								</div>
 							</div>
 						</div>
@@ -197,23 +197,23 @@
 					<div class="service service_4 df" data-popup="order" data-popup-type="service">
 						<div class="service__title-row df">
 							<div class="service__title-column">
+								<h2 class="service__title">Beat For Order</h2>
+							</div>
+							<div class="service__title-column">
 								<div class="service__icon-block">
 									<span class="icon-order"></span>
 								</div>
 							</div>
-							<div class="service__title-column">
-								<h2 class="service__title">Beat For Order</h2>
-							</div>
 						</div>
 						<div class="service__content-row df">
 							<div class="service__content-column">
-								<div class="service__btn-block">
-									<button class="service__btn" data-popup="order" data-popup-type="service">Start Now</button>
+								<div class="service__content">
+									<p class="service__text">Haven’t found a beat that matches your music style? We are going to make you one!</p>
 								</div>
 							</div>
 							<div class="service__content-column">
-								<div class="service__content">
-									<p class="service__text">Haven’t found a beat that matches your music style? We are going to make you one!</p>
+								<div class="service__btn-block">
+									<button class="service__btn" data-popup="order" data-popup-type="service">Start Now</button>
 								</div>
 							</div>
 						</div>
@@ -1083,6 +1083,7 @@
 			</div>
 		</div>
 	</div>
+
 	<div class="alert alert_delete">
 		<div class="alert__background"></div>
 		<div class="alert__wrapper">
@@ -1139,18 +1140,22 @@
 	<div class="inner-shadow"></div>
 	<div class="beforePlayer"></div>
 	<script src="../scripts/store.js"></script>
-	<script src="https://www.paypal.com/sdk/js?client-id=ARStEJmfhHgNuzbpP8ihXdHrxZymHBBOXz6wBnY_6czL8m-A8ECmqM34EkHxVPDaT4VPV1vt-Yb7aD7H&disable-funding=credit&currency=USD&commit=false"></script>
+	<script src="https://www.paypal.com/sdk/js?client-id=AZUJTy3m3cYGxDScoZgIvWo_EMAyFVlgKwYRP_G92CqyarA-J1Ra7rcmaPkzTnqezm-xMJ_BI_MNBbpR&disable-funding=credit&currency=USD&commit=false"></script>
 	<script>
 		paypal.Buttons({
 			// Sets up the transaction when a payment button is clicked
 			createOrder: function(data, actions) {
-				return actions.order.create({
-					purchase_units: [{
-						amount: {
-							value: '0.01' // Can reference variables or functions. Example: value: document.getElementById('...').value
-						}
-					}]
-				});
+				let totalValue = getAmountValue();
+
+				if (totalValue !== -1){
+					return actions.order.create({
+						purchase_units: [{
+							amount: {
+								value: totalValue // Can reference variables or functions. Example: value: document.getElementById('...').value
+							}
+						}]
+					});
+				};
 			},
 
 			// Finalize the transaction after payer approval
